--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vel eum temporibus ab magni deleniti quas
         facilis quis, minima officiis error porro suscipit, saepe ipsa esse dolores totam labore! Assumenda?</p>
+    <button>click me</button>
 </body>
 
 </html>
