--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vel eum temporibus ab magni deleniti quas
-        facilis quis, minima officiis error porro suscipit, saepe ipsa esse dolores totam labore! Assumenda?</p>
-
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vel eum
+      temporibus ab magni deleniti quas facilis quis, minima officiis error
+      porro suscipit, saepe ipsa esse dolores totam labore! Assumenda?
+    </p>
+    <p>finally i able to find solution how to add existing git repository</p>
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
