--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Learning HTML and CSS</title>
   </head>
 
   <body>
+    <h1>JavaScript is fun, but so is HTML & CSS!</h1>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vel eum
-      temporibus ab magni deleniti quas facilis quis, minima officiis error
-      porro suscipit, saepe ipsa esse dolores totam labore! Assumenda?
+      You Can Learn JavaScript whithout HTML and CSS, but for DOM manipulation
+      it's useful to have some basic ideas of HTML and CSS.
     </p>
-    <p>finally i able to find solution how to add existing git repository</p>
+    <h4>Another Heading</h4>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
+      asperiores?
+    </p>
     <script src="main.js"></script>
   </body>
 </html>
